# Abaloon

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Abalone.sln  CMakeCache.txt  New.vcxproj  New.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch_visual.bat  plateau.cpp  plateau.h
sources/: CMakeLists.txt  Main.cpp  New.kdev4  affiche.cpp  affiche.h  annexe.cpp  annexe.h  coup.cpp  coup.h  plateau.cpp  plateau.h
sources/.kdev4/: New.kdev4
